<resources>
    <string name="app_name">CopenhagenBuzz</string>
    <string name="submit">submit\n</string>
    <string-array name="dropdown_options">
        <item>Party</item>
        <item>Workshop</item>
        <item>Chinese New Year</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_event">Add hello event</string>
    <string name="hint_event_name">Event name</string>
    <string name="hint_event_location">Event location</string>
    <string name="hint_pick_date">Pick date</string>
    <string name="hint_event_type">Event Type</string>
    <string name="content_description_event_type">event type</string>
    <string name="hint_event_description">Event description</string>
    <string name="hint_event_date">Event date</string>"
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="guest">Guest</string>

    <!-- image strings -->
    <string name="event_image">This is the name of the image</string>

    <string name="default_web_client_id">Your_Web_Client_ID_From_Firebase</string>
    <string name="error_email_empty">Please enter your email</string>
    <string name="error_password_empty">Please enter your password</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="account_created">Account created successfully</string>
    <string name="favorite">Favourite</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="event_photo">Photo of the event</string>


</resources>