<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_padding_x0.5"
    app:cardElevation="@dimen/default_padding_x0.25"
    app:cardCornerRadius="@dimen/default_padding_x0.5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_event_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_event_location"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_event_date"
            android:textSize="14sp" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>