<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/field_gap"
        android:hint="@string/hint_event_name"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_festival_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/field_gap"
        android:hint="@string/hint_event_location"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_add_location_alt_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_pickDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/field_gap"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_access_time_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_pickDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pick_date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_type_container"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/field_gap"
        android:hint="@string/hint_event_type">

        <AutoCompleteTextView
            android:id="@+id/event_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="event type"
            android:inputType="none"
            app:simpleItems="@array/dropdown_options"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/field_gap"
        android:hint="@string/hint_event_description"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_add_location_alt_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine"
            android:maxLines="6" />

    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:id="@+id/imageViewEventPhoto"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/field_gap"
        android:scaleType="centerCrop"
        android:contentDescription="@string/event_photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/field_gap">

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Take Photo" />

        <Button
            android:id="@+id/btnChooseFromGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Choose from Gallery"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</LinearLayout>